2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* configure.in : bump version.

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.73

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* src/parser.y : add support for referencing names in other workbooks.

	* src/expr.c (expr_tree_new_name) : take an optional sheet and
	  workbook as scoping info.
	(expr_eval_real) : handle inactive names.
	(do_expr_tree_to_string) : improve scoping.
	(expr_rewrite) : handle inactives and scope changes.

	* src/expr-name.c (expr_name_lookup) : add the notion of active and a
	  ref count so that we can do a delayed destruction and invalidation.
	(expr_name_add) : make it clearer that the return is not meant
	  to be freed.
	(expr_name_create) : don't free the result of expr_name_lookup.
	(expr_name_ref) : generalize.
	(expr_name_unref) : ditto.
	(expr_name_remove) : deactivate the name.

2001-10-27  Almer S. Tigelaar  <almer@gnome.org>

	* src/GNOME_Gnumeric.xml: Tidy view menu.

	* src/workbook-control-gui.c: Idem.

2001-10-27  Almer S. Tigelaar  <almer@gnome.org>

	* src/GNOME_Gnumeric.xml: Enable validate menu item.

	* src/validation.[ch]: New, defines a container for
	validation settings.
	
	* src/Makefile.am: Add new validation.[ch]

	* src/gnumeric.h: Add validation declaration.

	* src/gui-validation.[ch] (validation_mstyle_get_title): Burn.
	(validation_generate_msg): Rework slightly to accept a stylecondition
	instead of an mstyle.
	(validation_mstyle_get_msg): Burn.
	(validation_mstyle_get_msg_subst): Burn.
	(validation_mstyle_set_title_msg): Burn.
	(validation_get_accept): Request a validation instead of
	an mstyle. Actually free the automatically generated message.

	* src/mstyle.[ch]: Adjust mstyle_names to include hidden/locked.
	(mstyle_hash): Remove validation style hashing.
	(mstyle_element_dump): Don't dump validation message, dump validation
	refcount instead.
	(mstyle_element_equal): Remove comparing of style and message.