@@ -1,3 +1,10 @@
+2001-10-29  Morten Welinder  <terra@diku.dk>
+
+	* src/func.c (function_iterate_argument_values): Plug leak.
+
+	* src/workbook-view.c (wb_view_save_as): Plug leak.
+	(wb_view_save): Ditto.
+
 2001-10-29  Jody Goldberg <jgoldberg@home.com>
 
 	* configure.in : bump version.
